argocd/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: raffle
    version: v1
  name: raffle-v1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: raffle
      version: v1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: raffle
        version: v1
    spec:
      containers:
        - image: localhost/rafflequiz:v1.0.0
          imagePullPolicy: IfNotPresent
          name: raffle
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: raffle
      serviceAccountName: raffle
      terminationGracePeriodSeconds: 3
