argocd/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: raffle
    version: v1
  name: raffle
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - appProtocol: http
      name: http-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: raffle
  sessionAffinity: None
  type: ClusterIP
