argocd/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: raffle
    zonename: zone1
  name: rafflequiz
spec:
  host: rafflequiz.apps.example.com
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: raffle
    weight: 100
  wildcardPolicy: None
